fix(FE/Download): No overflow, but scroll on small screens

--- a/src/main/webapp/assets/styles/styles.scss
+++ b/src/main/webapp/assets/styles/styles.scss
@@ -196,8 +196,8 @@ body {
 	left: 50%;
 	z-index: 1;
 	width: 90%;
+	height: 90%;
 	max-width: 960px;
-	max-height: 100%;
 	transform: translate(-50%, -50%);
 	background: rgba(0,0,0,.8);
 	border-radius: $default-border-radius;
@@ -218,6 +218,10 @@ body {
 	}
 
 	.m-download--content {
+		width: 100%;
+		height: 100%;
+		overflow-x: hidden;
+		overflow-y: auto;
 		background: #fff;
 		border-radius: $default-border-radius;
 		padding: 1em;
@@ -225,8 +229,7 @@ body {
 		img {
 			display: block;
 			border: none;
-			max-height: 65vh;
-			height: 570px;
+			width: 100%;
 			margin: auto;
 		}
 	}
